crates/pardosa-schema/tests/compile_fail/union_type.stderr
error: EVT-001: GenomeSafe cannot be derived for unions
 --> tests/compile_fail/union_type.rs:3:7
  |
3 | union Bad {
  |       ^^^
